<resources>
    <string name="app_name">TikEdu</string>
    <string name="title_activity_main">MainActivity</string>g>
    <string name="appName">TikEdu</string>
    <string name="currentScreenName">New User</string>
    <string name="sign_up">Sign Up</string>
    <string name="sign_in">Sign In</string>
    <string name="comment_button_description">Comment</string>
    <string name="dislike_button_description">Dislike</string>
    <string name="okay_like_button_description">Okay like</string>
    <string name="home_button_description">Home</string>
    <string name="like_button_description">Like</string>
    <string name="add_video_button_description">Add video</string>
    <string name="view_classes_button_description">View classes</string>
    <string name="student_textView">TikEdu Student</string>
    <string name="bottom_screen_task_bar_description">Bottom screen task bar</string>
    <string name="top_screen_task_bar_description">Top screen task bar</string>
    <string name="favorite_icon">Icon to view student\'s favorited video</string>
    <string name="teacher_textView">TikEdu Teacher</string>
    <string name="class_posts">Class Posts</string>
    <string name="unapproved_posts">Unapproved Posts</string>
    <string name="approve">Approve</string>
    <string name="deny">Deny</string>
    <string name="password_criteria">Passwords have to satisfy the following properties:\n&#8226;It cannot be empty\n&#8226;It contains at least 8 characters and at most 20 characters.\n&#8226;It contains at least one digit.\nIt contains at least one upper case alphabet.\n&#8226;It contains at least one lower case alphabet.\n&#8226;It contains at least one special character which includes !@#$%&amp;*()-+=^.\n&#8226;It doesn\'t contain any white space.</string>
    <string-array name="usertype_array">
        <item>Student</item>
        <item>Teacher</item>
    </string-array>
</resources>